--- a/add_entry.html
+++ b/add_entry.html
@@ -33,23 +33,26 @@
             <td><label for = "title">Title: </label></td>
             <td><input type="text" id= "title" name="title"></td>
           </tr>
-          <tr>			
+          <tr>
             <td style = "vertical-align: top"><label for = "body">Body: </label></td>
-            <td><textarea id = "body"  name = "body" placeholder = "Add text here"></textarea></td>							</tr>
-            <tr>
-              <td></td>
-              <td><input type = "submit" value = "Add entry" name = "submit"/><input type = "reset" value = "Clear" name = "clear" onclick = "return clearFunction()"/>
-              </tr>
-            </table>
-          </form>
-        </div>
-        <div id = "sidebar">
-          <ul>
-            <li><a href = "viewBlog.php">HOME</a></li><br/>
-            <li><a href = "add_entry.html">ADD ENTRY</a></li>
-          </ul>
-        </div>
-        <div id = "footer">				Copyright  &copy;			</div>
-      </div>
-    </body>
-    </html>
+            <td><textarea id = "body"  name = "body" placeholder = "Add text here"></textarea></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><input type = "submit" value = "Add entry" name = "submit"/><input type = "reset" value = "Clear" name = "clear" onclick = "return clearFunction()"/>
+            </tr>
+          </table>
+        </form>
+      </div>
+      <div id = "sidebar">
+        <ul>
+          <li><a href = "viewBlog.php">HOME</a></li><br/>
+          <li><a href = "add_entry.html">ADD ENTRY</a></li>
+        </ul>
+      </div>
+      <div id = "footer">
+        Copyright  &copy;
+      </div>
+    </div>
+  </body>
+  </html>
